feat: tab-data.js 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <ul class="text_tag">
                         <li class="sev00_menu">마이노트</li>
                         <li class="sev05_menu">검색하기</li>
-                        <li class="sev06_menu">커뮤니티</li>
+                        <li class="sev06_menu">필기노트</li>
                     </ul>
                 </div>
     
